<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- User interface labels and strings -->


    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Menu title -->
    <string name="action_settings">Settings</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Check game start</string>
    <string name="stop_updates">Check game end</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>

    <!-- The ones I made -->
    <string name="app_name">EquinoxChallenge</string>
    <string name="action_settings">Settings</string>
    <string name="recordPost">Record Post</string>
    <string name="photo">Photos</string>
    <string name="panic">Panic Button</string>
    <string name="title_activity_record_post">RecordPost</string>
    <string name="postNumber">Post Number</string>
    <string name="postLetters">Post Letter</string>
    <string name="save">Save</string>
    <string name="title_activity_photos">Photos</string>
    <string name="title_activity_panic_button">Panic Button</string>
    <string name="sendHelp">Send For Help</string>
    <string name="title_activity_evacuate">Equinox Challenge Alert</string>
    <string name="title_activity_settings">Settings</string>
    <string name="phoNum">Phone Number</string>
    <string name="netStatus">Network Status</string>
    <string name="locStat">Location Status</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="enterPhoneNumber">Enter Phone Number</string>
    <string name="enter">Enter</string>
    <string name="photo_button">Photo Button</string>
    <string name="title_activity_photo_gallery">Photo Gallery</string>
    <string name="hello_world">Hello world!</string>
    <string name="comments">Comments</string>
    <string name="userPhoto">User Taken Photo</string>
    <string name="deleteImage">Delete Image</string>
    <string name="sync_photos">Sync Photos</string>
    <string name="title_activity_photo_comment">Photo Comment</string>
    <string name="comment">Comment</string>

</resources>
