<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Settings" >

    <TextView
        android:id="@+id/label_lat_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latlng"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lat_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_lat_lng"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/label_lat_lng"
        android:textIsSelectable="true"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/address_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lat_lng"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_lat_lng"
        android:layout_marginLeft="10dp"
        android:textIsSelectable="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/latText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_lat_lng"
        android:layout_alignTop="@+id/address"
        android:text="@string/unknown"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/longText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_lat_lng"
        android:layout_below="@+id/latText"
        android:text="@string/unknown"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/longText"
        android:layout_below="@+id/longText"
        android:text="@string/phoneNumber"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/enterPhoneNumberID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/enterPhoneNumber" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/start_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterPhoneNumberID"
        android:layout_below="@+id/phoneEnterButtonID"
        android:onClick="checkGameStart"
        android:text="@string/start_updates" />

    <Button
        android:id="@+id/phoneEnterButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/enterPhoneNumberID"
        android:layout_alignBottom="@+id/enterPhoneNumberID"
        android:layout_toRightOf="@+id/enterPhoneNumberID"
        android:onClick="enterPhoneNumber"
        android:text="@string/enter" />

</RelativeLayout>