<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/postButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/panicButt"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/photoButt"
        android:layout_marginTop="30dp"
        android:onClick="recordPost"
        android:text="@string/recordPost" />

    <Button
        android:id="@+id/photoButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/panicButt"
        android:layout_alignRight="@+id/panicButt"
        android:layout_below="@+id/postButt"
        android:layout_marginTop="18dp"
        android:onClick="photos"
        android:text="@string/photo" />

    <Button
        android:id="@+id/panicButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photoButt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:onClick="panicButton"
        android:text="@string/panic" />

</RelativeLayout>